# galasa-parent/dev.galasa.framework.api.ras/src/main/java/dev/galasa/framework/api/ras/internal/ResultNames.java
@@ -3,7 +3,7 @@ package dev.galasa.framework.api.ras.internal;
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.util.ArrayList;
-import java.util.Comparator;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -12,28 +12,24 @@ import javax.servlet.ServletException;
 import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-
-import com.google.gson.Gson;
-import com.google.gson.JsonElement;
-import com.google.gson.JsonObject;
+import javax.validation.constraints.NotNull;
 
 import org.osgi.service.component.annotations.Component;
 import org.osgi.service.component.annotations.Reference;
 import org.osgi.service.component.annotations.ServiceScope;
 
+import com.google.gson.Gson;
+import com.google.gson.JsonElement;
+import com.google.gson.JsonObject;
+
 import dev.galasa.framework.spi.IFramework;
 import dev.galasa.framework.spi.IResultArchiveStoreDirectoryService;
 import dev.galasa.framework.spi.ResultArchiveStoreException;
-import dev.galasa.framework.spi.ras.RasTestClass;
 
 @Component(service = Servlet.class, scope = ServiceScope.PROTOTYPE, property = {
-"osgi.http.whiteboard.servlet.pattern=/ras/testclasses" }, name = "TestClasses RAS")
+"osgi.http.whiteboard.servlet.pattern=/ras/resultnames" }, name = "Galasa Test Result Names microservice")
+public class ResultNames extends HttpServlet {
 
-public class TestClassesRas extends HttpServlet {
-
-	/**
-	 *
-	 */
 	private static final long serialVersionUID = 1L;
 
 	@Reference
@@ -42,40 +38,36 @@ public class TestClassesRas extends HttpServlet {
 	@Override
 	protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
 		Map<String, String[]> query = req.getParameterMap();
-		List<RasTestClass> classArray = new ArrayList<>();
+		List<String> resultsList = new ArrayList<>();
 
-		try{
+		try {
 			for (IResultArchiveStoreDirectoryService directoryService : framework.getResultArchiveStore().getDirectoryServices()) {
-				if(!directoryService.getTests().isEmpty()) {
-					classArray.addAll(directoryService.getTests());
+				if(!directoryService.getResultNames().isEmpty()) {
+					resultsList.addAll(directoryService.getResultNames());
 				}
 			}
-		} catch (ResultArchiveStoreException e) {
-			throw new ServletException("Problem with retrieving tests", e);
+		}
+		catch(ResultArchiveStoreException e){
+			throw new ServletException("Error occured during get result names", e);
 		}
 
-		classArray.sort(Comparator.comparing(RasTestClass::getTestClass));
-		
-		/* looking for sort options in query and sorting accordingly */
-		if(!query.isEmpty()){
-			if(!ExtractQuerySort.isAscending(query, "testclass")) {
-				classArray.sort(Comparator.comparing(RasTestClass::getTestClass).reversed());
+		Collections.sort(resultsList);
+
+		if(!query.isEmpty()) { 
+			if(!ExtractQuerySort.isAscending(query, "resultname")) {
+				Collections.reverse(resultsList);
 			}
 		}
 
+		JsonElement json = new Gson().toJsonTree(resultsList);
+		JsonObject resultnames = new JsonObject();
+		resultnames.add("resultnames", json);
 
-		/* converting data to json */
-		JsonElement json = new Gson().toJsonTree(classArray);
-		JsonObject testclasses = new JsonObject();
-		testclasses.add("testclasses", json);
-
-		/* setting response status and type */
 		resp.setStatus(200);
 		resp.setContentType("application/json");
 		resp.setHeader("Access-Control-Allow-Origin", "*");
 		PrintWriter out = resp.getWriter();
-		out.print(testclasses);
-
+		out.print(resultnames);
 	}
 
 }
